--- a/src/Frontend/src/app/Feature/pets/pet-details/pet-details.html
+++ b/src/Frontend/src/app/Feature/pets/pet-details/pet-details.html
@@ -72,6 +72,7 @@
                   [routerLink]="['/pets/update', UrlId]"
                   class="btn btn-warning btn-sm"
                   *ngIf="
+                    isDataReady &&
                     authService.isAuthenticated() &&
                     authService.getUserId() === pet.customerId
                   "
@@ -82,6 +83,7 @@
                   class="btn btn-danger btn-sm"
                   (click)="deletePetById(pet.id)"
                   *ngIf="
+                    isDataReady &&
                     authService.isAuthenticated() &&
                     authService.getUserId() === pet.customerId
                   "
