--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -1,6 +1,5 @@
 <header class="header bg-light border-bottom py-2">
   <div class="container d-flex justify-content-between align-items-center">
-
     <!-- Logo -->
     <a
       routerLink="/"
@@ -64,7 +63,7 @@
       <div class="btns d-none d-xl-block ms-3">
         <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
         <a class="btn btn-primary" routerLink="/register">Register</a>
-
+      </div>
       <div class="btns d-none d-xl-block ms-3">
         <ng-container *ngIf="!isAuthenticated()">
           <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
