--- a/src/Frontend/src/app/Feature/Products/product-details/product-details.html
+++ b/src/Frontend/src/app/Feature/Products/product-details/product-details.html
@@ -1,7 +1,6 @@
 <div *ngIf="product" class="container mt-5">
   <div class="row align-items-start shadow p-4 rounded bg-white">
     
-    <!-- الصورة -->
     <div class="col-md-5 mb-3 mb-md-0">
       <img 
         [src]="server + product.imgUrl" 
@@ -11,14 +10,14 @@
       />
     </div>
     
-    <!-- التفاصيل -->
     <div class="col-md-7">
       <h2 class="h4 font-weight-bold mb-3">{{ product.name }}</h2>
       <p class="text-muted mb-3">{{ product.description }}</p>
       <p class="text-primary font-weight-bold mb-2">Price: {{ product.price | currency:'USD' }}</p>
       <p class="text-secondary mb-4">Category: {{ product.productTypeName }}</p>
       
-      <button class="btn btn-primary">Add to Cart</button>
+      <button class="btn btn-primary" (click)="addToCart()">Add to Cart</button>
+
     </div>
     
   </div>
