--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -53,9 +53,21 @@
         <li class="nav-item">
           <a
             class="nav-link text-dark fw-semibold pointer"
+            routerLink="/all-products"
+            >Shop</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-dark fw-semibold pointer"
             routerLink="/contact"
             >Contact</a
           >
+        </li>
+        <li *ngIf="isAuthenticated()">
+          <a [routerLink]="['/cart']" class="btn btn-outline-primary position-relative">
+          <i class="fas fa-shopping-cart"></i>
+          </a>
         </li>
       </ul>
 
