--- a/src/Frontend/src/app/Feature/doctors/doctors.html
+++ b/src/Frontend/src/app/Feature/doctors/doctors.html
@@ -16,61 +16,50 @@
     </p>
   </div>
 
-  <div class="containe\r d-flex justify-content-center">
-    <form method="get" class="col-md-8 mb-4 mt-4">
-      <div class="row g-3">
-        <div class="col-md-4">
-          <input
-            type="text"
-            name="name"
-            [(ngModel)]="name"
-            class="form-control"
-            placeholder="Search by name..."
-          />
-        </div>
+<div class="d-flex justify-content-center">
+  <form method="get" class="col-md-8 mb-4 mt-4">
+    <div class="input-group">
+      <input
+        type="text"
+        name="name"
+        [(ngModel)]="name"
+        class="form-control"
+        placeholder="Search by name..."
+      />
 
-        <div class="col-md-4">
-          <input
-            type="number"
-            name="maxPrice"
-            [(ngModel)]="maxPrice"
-            class="form-control"
-            placeholder="Max price per hour"
-            step="1"
-            value=""
-          />
-        </div>
+      <input
+        type="number"
+        name="maxPrice"
+        [(ngModel)]="maxPrice"
+        class="form-control"
+        placeholder="Max price per hour"
+        step="1"
+        value=""
+      />
 
-        <div class="col-md-4">
-          <select [(ngModel)]="specialty" class="form-select" name="specialty">
-            <option value="0" selected disabled>-- All Specialties --</option>
-            @for ( speciality of specialities; track speciality.value ) {
-            <option [value]="speciality.value">
-              {{ speciality.specialityName }}
-            </option>
+      <select [(ngModel)]="specialty" class="form-select" name="specialty">
+        <option value="0" selected disabled>-- All Specialties --</option>
+        @for (speciality of specialities; track speciality.value) {
+        <option [value]="speciality.value">
+          {{ speciality.specialityName }}
+        </option>
+        }
+      </select>
 
-            <!-- @if (item.Value == "specialty")
-                            {
-                                <option [value]="speciality.value" selected>{{speciality.specialityName}}</option>
-                            }
-                            @else
-                            {
-                                <option [value]="speciality.value">{{speciality.specialityName}}</option>
-                            }  -->
-            }
-          </select>
-        </div>
-      </div>
+      <input
+        type="text"
+        placeholder="Search By City"
+        [(ngModel)]="city"
+        class="form-control"
+        name="city"
+      />
 
-      <div class="row g-3 mt-2 justify-content-center">
-        <div class="col-md-3 d-grid">
-          <button type="submit" class="btn btn-primary" (click)="search()">
-            Search
-          </button>
-        </div>
-      </div>
-    </form>
-  </div>
+      <button type="submit" class="btn btn-primary" (click)="search()">
+        Search
+      </button>
+    </div>
+  </form>
+</div>
   <div class="container d-flex justify-content-center">
     <!-- if didn't find any -->
     @if (typeof allDoctors== "string" || errorFound) {
